# ComfyUI-HakuImg

./: .gitignore  .gitmodules  README-zh.md  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: Blur.json  Chromatic.json  Color.json  CustomExif.json  Glow.json  PixelOE.json  Pixelize.json  PreResize.json  Sketch.json
examples/: BlendImage.json  Curve.json  CustomExif.json  Flip.json  InOutPaint.json  LenDistortion.json  OutlineExpansion.json  PixelOE.json  TiltShift.json
hakuimg/: image_preprocess.py  neon.py  outline_expansion.py  pixel.py  pixeloe.py  pre_resize.py
hakuimg/chromatic/: kromo.py
js/: widgethider.js
nodes/: blend.py  blur.py  chromatic.py  color.py  curve.py  custom_exif.py  flip.py  inoutpaint.py  lens_distortion.py  neon.py  outline_expansion.py  pixelize.py  pixeloe.py  pixeloe_.py  pre_resize.py  save_image.py  sketch.py  tilt_shift.py
utils/: check.py  logging.py  utils.py
